[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pselib"
version = "0.1.0"
description = "A library of nonlinear optimization test problems from process systems engineering applications."
authors = [
    { name = "Robert Parker", email = "rbparker@lanl.gov" },
]
license = { text = "BSD-3" }

[tool.setuptools.packages.find]
include = ["pselib*"]
